# ChangeLog for dev-java/icedtea6
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  15 Aug 2008; Petteri Räty <betelgeuse@gentoo.org> icedtea6-9999.ebuild:
  Remove KEYWORDS from the live ebuild so that users get 1.2 by default.

  07 Aug 2008; Andrew John Hughes <gnu_andrew@member.fsf.org> icedtea6-9999.ebuild:
        Fix rhino_jar declaration.
	
  01 Aug 2008; Andrew John Hughes <gnu_andrew@member.fsf.org> metadata.xml:
	Document zero USE flag.

  31 Jul 2008; Andrew John Hughes <gnu_andrew@member.fsf.org> icedtea6-9999.ebuild:
        Create directory for examples.

  29 Jul 2008; Andrew John Hughes <gnu_andrew@member.fsf.org> icedtea6-9999.ebuild:
        Only check for Rhino jar when enabled.
	
  28 Jul 2008; Andrew John Hughes <gnu_andrew@member.fsf.org> icedtea6-9999.ebuild:
        Remove >= from Rhino dependency following previous change.
	
  27 Jul 2008; Andrew John Hughes <gnu_andrew@member.fsf.org> icedtea6-9999.ebuild:
        Use slots for Rhino dependency.
	
  24 Jul 2008; Andrew John Hughes <gnu_andrew@member.fsf.org> icedtea6-9999.ebuild:
	Fixing naming of directory from Mercurial eclass.

  24 Jul 2008; Andrew John Hughes <gnu_andrew@member.fsf.org> icedtea6-9999.ebuild:
    Fix Mercurial ebuild to use (undocumented) Mercurial eclass.
	
*icedtea6-9999 (24 07 2008)

  24 Jul 2008; Andrew John Hughes <gnu_andrew@member.fsf.org> icedtea6-9999.ebuild:
	New ebuild for current Mercurial version.
	