@@ -18,7 +18,7 @@ IUSE="debug doc examples javascript nsplugin zero"
 
 LICENSE="GPL-2-with-linking-exception"
 SLOT="0"
-KEYWORDS=""
+KEYWORDS="~amd64 ~ppc ~ppc64 ~x86"
 
 RDEPEND=">=net-print/cups-1.2.12
 	 >=x11-libs/libX11-1.1.3
@@ -97,14 +97,14 @@ src_compile() {
 	fi
 
 	if use javascript ; then
-		rhino_jar=$(use_with javascript rhino $(java-pkg_getjar rhino:1.6 js.jar));
+		rhino_jar=$(java-pkg_getjar rhino:1.6 js.jar);
 	fi
 
 	unset JAVA_HOME JDK_HOME CLASSPATH JAVAC JAVACFLAGS
 
 	econf ${config} \
 		--with-openjdk-src-zip="${DISTDIR}/${OPENJDK_TARBALL}" \
-		$(use_enable debug optimizations) \
+		$(use_enable !debug optimizations) \
 		$(use_enable doc docs) \
 		$(use_enable nsplugin gcjwebplugin) \
 		$(use_with javascript rhino ${rhino_jar}) \
