@@ -2,8 +2,11 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Aug 2008; Andrew John Hughes <gnu_andrew@member.fsf.org> icedtea6-9999.ebuild:
+       Fix rhino_jar declaration, use of debug and readd KEYWORDS for experimental.
+
   15 Aug 2008; Petteri Räty <betelgeuse@gentoo.org> icedtea6-9999.ebuild:
-  Remove KEYWORDS from the live ebuild so that users get 1.2 by default.
+    Remove KEYWORDS from the live ebuild so that users get 1.2 by default.
 
   07 Aug 2008; Andrew John Hughes <gnu_andrew@member.fsf.org> icedtea6-9999.ebuild:
         Fix rhino_jar declaration.
